Fixed hover issue by adding z-index -5 to loader, causing it to be 'behind' the main content.

--- a/Client/style/main.sass
+++ b/Client/style/main.sass
@@ -43,6 +43,7 @@ html
 	font-size: 2rem
 	position: absolute
 	text-align: center
+	z-index: -5
 
 #loading-bar
 	background-color: $color_font
